--- a/css/purple-theme.css
+++ b/css/purple-theme.css
@@ -1,9 +1,8 @@
 /*------------------------------------------------------------------
- * Theme Name: CRE8
- * Theme URI: https://www.brandio.io/envato/crea8
- * Author: Brandio
- * Author URI: https://www.brandio.io/
- * Copyright 2019 Brandio.
+ * Theme Name: EVESION
+  * Author: Frank Geraets
+ * Author URI: https://evesion.com
+ * Copyright 2022.
  -------------------------------------------------------------------*/
 /* -----------------------------------
     1 - General Styles
