--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@
  * Author: Frank Geraets
  * Author URI: https://evesion.com
  * Description: Frank's Personal Website
- * Version: 1.4
- * Bootstrap v4.1 (http://getbootstrap.com)
+ * Version: 3.1
+ * Bootstrap v5.1.3 (http://getbootstrap.com)
  * Copyright 2022 evesion.com
  -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
@@ -605,6 +605,13 @@ body.menu-open {
     margin-bottom: 3rem;
 }
 
+.boxy h2.title {
+    font-size: 4.1rem;
+    line-height: 3.4rem;
+    margin: 0;
+    margin-bottom: 3rem;
+}
+
 .boxy .text ul {
     padding: 0;
     margin: 0;
@@ -664,6 +671,10 @@ body.menu-open {
     color: #232931;
 }
 
+.boxy.c1-color h2.title {
+    color: #232931;
+}
+
 .boxy.c1-color .text {
     color: rgba(0, 0, 0, 0.66);
 }
@@ -701,6 +712,10 @@ body.menu-open {
 }
 
 .boxy.default-color h1.title {
+    color: #EEEEEE;
+}
+
+.boxy.default-color h2.title {
     color: #EEEEEE;
 }
 
@@ -865,6 +880,12 @@ body.menu-open {
 .lg-text .other-color {
     color: #4ECCA3;
     font-family: "Lalezar", cursive;
+}
+
+.normal-text h1 {
+    color: rgba(255, 255, 255, 0.66);
+    font-size: 1.26rem;
+    line-height: 2.5rem;
 }
 
 .normal-text p {
@@ -1686,6 +1707,11 @@ body.menu-open {
         line-height: 2.8rem;
     }
 
+    .normal-text h1 {
+        font-size: 1.1rem;
+        line-height: 1.8rem;
+    }
+
     .normal-text p {
         font-size: 1.1rem;
         line-height: 1.8rem;
@@ -2036,6 +2062,15 @@ body.menu-open {
     .lg-text {
         font-size: 2.6rem;
         line-height: 1.9rem;
+    }
+    .normal-text h1 {
+        font-size: 1rem;
+        line-height: 1.8rem;
+    }
+
+    .normal-text h1 {
+        font-size: 1rem;
+        line-height: 1.8rem;
     }
 
     .normal-text p {
